# algds20242025

./: .gitignore  .gitignore.txt  AVL.c  AVL_list.h  AVL_tests.cpp  B-tree.cc  CMakeLists.txt  CMakePresets.json  FunctList.h  Hash_tables.c  Header.h  LIB_C.h  Lab-B.cpp  LabB.c  LabD.c  LabD.h  LabD_tests.c  LabH.c  LabI.cc  LabJ.c  LabJ.h  Lab_C.c  Lab_C.h  Lab_E.c  Lab_E.h  Lab_H.h  Lab_I.cc  Lab_J.c  LabaD_lib.c  LabaD_lib.h  LibA.h  Libr.h  List.txt  Makefile  Mazez.vcxproj  README (1).md  README-LabD.md  README.md  README.txt  READme.txt  (+208 more)
J/: README.md  main.c
LAB_D/: Header.h  README.md  descript.c  main.c
LAB_E/: Main.c  README.md
LAB_H/: README.md  Tree.h  descript.c  main.c  main.cpp  rbtree.h  test.cpp
Lab C/: Sample-Test1.vcxproj  maze.c  test.cpp
Lab H var32/: Sample-Test1.vcxproj  Treap.vcxproj  test.cpp  treap.c  treap.h
Lab-I/: btree.cc
Lab-J/: README.md  main.c
LabA/: README.md  Test.c  lab1.c  labA.h
LabB/: LabB_main.c  README.md  memallocator.c  memory.cc
LabC/: README.md  Source.c  lab.c  labC.h  list.txt  main.c  matrix.txt  stack.c  stack.h  test.c  test.cpp  test_list.txt  test_matrix.txt
LabD/: LabD_lib.c  LabD_lib.h  README.md  funcs.c  funcs.h  input.txt  labD.c  labD.h  labD_full.c  main.c  rucksack.c  rucksack.h  test.cpp
LabE/: CMakeLists.txt  LabE.c  PrintTree.vcxproj  Sample-Test1.vcxproj  funcs.c  funcs.h  main.c  printtree.c  printtree.h  read.me  test.cpp
LabF/: labF.h  main.c  test.cpp
LabH/: README.md  Tests.c  funcs.c  funcs.h  laba1.c  laba1.h  test.cpp  test_trees.c
LabI/: btree.cc  btree.cpp  btree.h
LabJ/: README.md  laba2.c  main.c
Lab_2/: Source.cpp  memallocator.cpp  memallocator.h
Lab_3/: Source.cpp  memallocator.cpp  memallocator.h
Lab_B/: Test.c  memallocator.c  memallocator.h
Lab_C/: Lab_C.h  README.txt  graph.c  graph.h  graph.txt  main.c  nonexistent_file.txt  small_graph.txt  tests.c  tests.h
Lab_D/: README.txt  main.c
Lab_E/: Lab_E.c  Lab_E.h  README.md  README.txt  main.c  test.cpp  tree.c  tree.h
Lab_H/: Lab_H.c  Lab_H.h  README.md  main.c  main.h  test.cpp  tests.c
Lab_I/: Lab_I.cpp  README.md  btree.cc  btree.cpp  btree.h  main.cpp
Lab_J/: Header.h  Lab_J.c  Lab_J.cpp  Lab_J.h  README.md  hashtable.c  hashtable.h  main.c  main.cpp  test.cpp  tests.c
Lab_h/: README  README.md  functions.c  functions.h  main.c  tests.c  tests.h  treap.c  treap.h
Lab_i/: README.md  labi.cpp
alg_21/: Header.h  alg_21.c  readme.txt  test.c
include/: AVLTree.h  BSTTreee.h  btree.h  carriages.c  hashmap.h  join.h  list.h  matrix.h  method.h  queen.h  tree.c
lab 2/: README.md  tests.c  tests.h
lab 4/: lib.c  lib.h  main.c  tests.c  tests.h
lab F/: README.md  main.c  tests.c  tests.h
lab J/: README.md  main.c  tests.c
lab-H/: .gitignore  Makefile  input.txt  output.txt  skew_heap_full.c
lab-I/: LabI.cc  Lab_H  README.md  bstree.h  btree.cc  btree.h  main.cc  rbtree.c  rbtree.h  test.c
lab1/: .gitkeep  A-19.c  A19.c  A19_tests.c  A_v29.c  A_v29.h  Algosy_lab1_array.c  Algosy_laba1_list.c  All_Telegrams_Delivered_On_Time.txt  Arr_queue.c  Arr_queue.h  Array.c  Array.h  B_lab.cpp  Base.txt  C24.c  C24_tests.c  CMakeLists.txt  CartesianTree.c  CartesianTree.h  CartesianTree_tests.cpp  Dasha_LabA.cpp  Dasha_LabA.h  Edge_Case_with_K=0.txt  Extended_Linked_List.h  FileName.c  Hash-table.c  HashTable.c  HashTable.h  HashTable_LabJ.cpp  Header,h  Header.h  Lab1.c  Lab1.h  LabA.cpp  LabA.h  LabC.c  LabC_lib.c  LabC_lib.h  LabD.c  (+229 more)
lab1/BigInt/: code.c  code.h  main.c  test.c
lab1/LabA_XOR/LabA_XOR/: LabA_XOR.vcxproj  XORLab.c  XORLab.h
lab1/LabE_11/: README.md  header.h  main.c  utests.c
lab1/Lab_D/: README.md  main.c
lab1/XOR_TEST/XOR/: XOR.cpp  XOR.vcxproj
lab1/include/: graph.c  list.c
lab1/output/: main
lab1/output/main.dSYM/Contents/Resources/DWARF/: main
lab1/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
lab1/src/: lint.c  lint.h
lab1/task/: graph_task.c  list_task.c
lab1/test/: add_test.c  from_str.c  lint_pow_test.c  multiply_test.c  test_main.c  tests.c
lab1/tests/: graph_tests.cpp  list_tests.cpp
lab2/: CMakeLists.txt  HashMap.cpp  HashMap.h  Header.h  Lab-B.cpp  LabB.cc  LabC.cpp  LabC.h  Lab_C.c  Lab_C.h  Labyrinth.c  LibC.h  Main.c  README.md  README.txt  README2.md  ReadME.txt  ReadMe.txt  Source.c  Source.h  Stack.cpp  Stack.h  Test.c  Test.cpp  Tests.cpp  UnitTests.c  UnitTests2.c  a lot of paths.txt  adjacency list.txt  adjacency matrix.txt  adjacency_list.txt  bfs.c  bfs.h  btree.cc  desktop.ini  error marshrut.txt  error matrix.txt  error num vershin.txt  error start marshrut.txt  false marshrut.txt  (+60 more)
lab3/: Hamilton.c  Hamilton1.c  Header.h  LabD.c  Lab_C.c  Lab_C.h  LibD.h  Maze.c  Maze.h  README.md  README3.md  Readme.md  Source.c  Source.h  Test.c  adjacency_list.txt  alg_3.c  bst.c  bst.h  bst_test.cpp  cells.c  cells.h  expressions.c  expressions.h  functions.c  functions.h  graph.h  graph.txt  graph_coloring.c  graph_coloring.h  graph_sort.c  graph_sort.h  graph_sort_tests.cpp  graphcompare.c  graphcompare.h  input.txt  input1.txt  input2.txt  input_test2.txt  lab3.c  (+37 more)
lab3d/: Test.cpp  graph.c  graph.h  input.txt.txt  main.c
lab4/: Header.h  LabD.cpp  LabD.h  READE.md  README.md  README4.md  Readme.md  Source.c  Source.h  Test.c  alg_4.c  bintree.c  bintree.h  bst.c  bst.h  bst_test.cpp  cham.c  complete_graph_four_vertices.txt  cycle_graph_six_vertices.txt  (+33 more)
labJ/: CMakeLists.txt  HashTable.c  HashTable.h  Lab_J.c  Makefile  README.md  README.txt  double_hashing.c  hash_map.c  hash_map.h  hash_table.c  hash_table.h  labJ.c  labJ.h  main.c  main.cpp  package.c  test.c  test.cpp  testJ.c  testJ.h  test_hash_map.cpp  test_hashtable  tests.cpp
lab_h/: CMakeLists.txt  functions.c  functions.h  tests.c
labh/: CMakeLists.txt  README.md  funcs.c  funcs.h  main.c  structs.h  tests.c  tests.h
labh/include/: rb_tree.h
labh/src/: rb_tree.c
labh/tests/: delete_test.c  insert_test.c  search_test.c
test/: AVLTree.cpp  CMakeLists.txt  HashMap.cpp  TreeTests.cpp  btree.cpp  dfs.cpp  join.cpp  list.cpp  matrix.cpp  queen.cpp
(+537 files in other folders)
